--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.13
+Date: 4. 27. 2023
+  Bugfix:
+    - Fixed Bio-Cannon image
+---------------------------------------------------------------------------------------------------
 Version: 1.1.12
 Date: 4. 27. 2023
   Features:
