Bio Cannon Updates

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.14
+Date: 4. 27. 2023
+  Features:
+    - New Bio-Cannon Stuff
+---------------------------------------------------------------------------------------------------
 Version: 1.1.13
 Date: 4. 27. 2023
   Bugfix:
