--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.15
+Date: 5. 2. 2023
+  Bugfix:
+    - Fixed Bio Cannon Graphics
+---------------------------------------------------------------------------------------------------
 Version: 1.1.14
 Date: 4. 27. 2023
   Features:
