--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,20 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.20
+Date: 8. 9. 2023
+  Features:
+    - Added a Med-Kit recipe
+---------------------------------------------------------------------------------------------------
+Version: 1.1.19
+Date: 7. 9. 2023
+  Features:
+    - Some K2 tweaks
+---------------------------------------------------------------------------------------------------
+Version: 1.1.18
+Date: 6. 29. 2023
+  Features:
+    - Some updated Icons. Thanks Snouz!
+    - Some Space Exploration compatibility tweaks
+---------------------------------------------------------------------------------------------------
 Version: 1.1.17
 Date: 5. 26. 2023
   Features:
